--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 # ----------------------- #
 
 url: http://georglind.github.com
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: georglind.dk
+subtitle: Kim G. L. Pedersen 
+author: Kim G. L. Pedersen
 simple_search: http://google.com/search
-description:
+description: A page and blog of Kim G. L. Pedersen
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
@@ -58,7 +58,7 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/twitter.ht
 # ----------------------- #
 
 # Github repositories
-github_user:
+github_user: georglind
 github_repo_count: 0
 github_show_profile_link: true
 github_skip_forks: true
