--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://georglind.github.dk
+url: http://www.georglin.com
 title: georglind.dk
 subtitle: Kim G. L. Pedersen 
 author: Kim G. L. Pedersen
